--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="manifest" href="/manifest.json" />
     <title>Pig Game</title>
   </head>
-  <body>
+  <body class="h-full">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="h-full"></div>
     <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
