Finished mobile and laptop stylings and adjusted the logic for player turns by adding state in App_State_Context.tsx
Removed use effect in Game_Container for turn determination

used context to pass state of turns directly to buttons and player Columns

adjusted styling to look less janky on resizing

styling was completed for mobile sizes in portrait orientation and laptop screen sizes

--- a/index.html
+++ b/index.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="fullContainers">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="public/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="manifest" href="/manifest.json" />
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image" href="./src/Assets/Images/pigIcon/00_standardPigIcon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/src/Styles/index.css">
     <title>Pig Game</title>
   </head>
-  <body class="h-full">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="h-full"></div>
-    <script type="module" src="./src/index.tsx"></script>
+  <body class="fullContainers">
+    <div id="root" class="fullContainers"></div>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
