adjusted styles for proper mobile UX

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="fullContainers">
+<html lang="en" class="fullContainersMobile sm:fullContainersLaptop sm:bg-blue-500">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="./src/Assets/Images/pigIcon/00_standardPigIcon.png" />
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="/src/Styles/index.css">
     <title>Pig Game</title>
   </head>
-  <body class="fullContainers">
-    <div id="root" class="fullContainers"></div>
+  <body class="fullContainersMobile sm:fullContainersLaptop sm:bg-blue-500">
+    <div id="root" class="fullContainersMobile sm:fullContainersLaptop sm:bg-blue-500"></div>
     <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
